--- a/msvc/neurology/neurology.vcxproj
+++ b/msvc/neurology/neurology.vcxproj
@@ -88,6 +88,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -100,6 +101,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -114,6 +116,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -130,6 +133,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -142,28 +146,33 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\include\neurology.hpp" />
-    <ClInclude Include="..\..\src\include\neurology\dos.hpp" />
+    <ClInclude Include="..\..\src\include\neurology\configuration.hpp" />
     <ClInclude Include="..\..\src\include\neurology\exception.hpp" />
-    <ClInclude Include="..\..\src\include\neurology\file.hpp" />
     <ClInclude Include="..\..\src\include\neurology\heap.hpp" />
     <ClInclude Include="..\..\src\include\neurology\memory.hpp" />
-    <ClInclude Include="..\..\src\include\neurology\nt.hpp" />
-    <ClInclude Include="..\..\src\include\neurology\optional.hpp" />
     <ClInclude Include="..\..\src\include\neurology\pe.hpp" />
+    <ClInclude Include="..\..\src\include\neurology\pe\dos.hpp" />
+    <ClInclude Include="..\..\src\include\neurology\pe\file.hpp" />
+    <ClInclude Include="..\..\src\include\neurology\pe\image.hpp" />
+    <ClInclude Include="..\..\src\include\neurology\pe\nt.hpp" />
+    <ClInclude Include="..\..\src\include\neurology\pe\optional.hpp" />
+    <ClInclude Include="..\..\src\include\neurology\pe\section.hpp" />
     <ClInclude Include="..\..\src\include\neurology\process.hpp" />
-    <ClInclude Include="..\..\src\include\neurology\section.hpp" />
+    <ClInclude Include="..\..\src\include\neurology\security.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\lib\dos.cpp" />
+    <ClCompile Include="..\..\src\lib\configuration.cpp" />
     <ClCompile Include="..\..\src\lib\exception.cpp" />
-    <ClCompile Include="..\..\src\lib\file.cpp" />
     <ClCompile Include="..\..\src\lib\heap.cpp" />
     <ClCompile Include="..\..\src\lib\memory.cpp" />
-    <ClCompile Include="..\..\src\lib\nt.cpp" />
-    <ClCompile Include="..\..\src\lib\optional.cpp" />
-    <ClCompile Include="..\..\src\lib\pe.cpp" />
+    <ClCompile Include="..\..\src\lib\pe\dos.cpp" />
+    <ClCompile Include="..\..\src\lib\pe\file.cpp" />
+    <ClCompile Include="..\..\src\lib\pe\image.cpp" />
+    <ClCompile Include="..\..\src\lib\pe\nt.cpp" />
+    <ClCompile Include="..\..\src\lib\pe\optional.cpp" />
+    <ClCompile Include="..\..\src\lib\pe\section.cpp" />
     <ClCompile Include="..\..\src\lib\process.cpp" />
-    <ClCompile Include="..\..\src\lib\section.cpp" />
+    <ClCompile Include="..\..\src\lib\security.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
