can someone please send me some help I appear to be trapped somewhere between a reinterpret_cast and std::is_base_of

--- a/msvc/neurology/neurology.vcxproj
+++ b/msvc/neurology/neurology.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="..\..\src\include\neurology\handle.hpp" />
     <ClInclude Include="..\..\src\include\neurology\heap.hpp" />
     <ClInclude Include="..\..\src\include\neurology\memory.hpp" />
+    <ClInclude Include="..\..\src\include\neurology\outlet.hpp" />
     <ClInclude Include="..\..\src\include\neurology\pe.hpp" />
     <ClInclude Include="..\..\src\include\neurology\pe\dos.hpp" />
     <ClInclude Include="..\..\src\include\neurology\pe\file.hpp" />
@@ -159,7 +160,6 @@
     <ClInclude Include="..\..\src\include\neurology\pe\optional.hpp" />
     <ClInclude Include="..\..\src\include\neurology\pe\section.hpp" />
     <ClInclude Include="..\..\src\include\neurology\process.hpp" />
-    <ClInclude Include="..\..\src\include\neurology\reference.hpp" />
     <ClInclude Include="..\..\src\include\neurology\security.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -168,6 +168,7 @@
     <ClCompile Include="..\..\src\lib\handle.cpp" />
     <ClCompile Include="..\..\src\lib\heap.cpp" />
     <ClCompile Include="..\..\src\lib\memory.cpp" />
+    <ClCompile Include="..\..\src\lib\outlet.cpp" />
     <ClCompile Include="..\..\src\lib\pe\dos.cpp" />
     <ClCompile Include="..\..\src\lib\pe\file.cpp" />
     <ClCompile Include="..\..\src\lib\pe\image.cpp" />
@@ -175,7 +176,6 @@
     <ClCompile Include="..\..\src\lib\pe\optional.cpp" />
     <ClCompile Include="..\..\src\lib\pe\section.cpp" />
     <ClCompile Include="..\..\src\lib\process.cpp" />
-    <ClCompile Include="..\..\src\lib\reference.cpp" />
     <ClCompile Include="..\..\src\lib\security.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
