--- a/msvc/neurology/neurology.vcxproj.filters
+++ b/msvc/neurology/neurology.vcxproj.filters
@@ -78,7 +78,7 @@
     <ClInclude Include="..\..\src\include\neurology\handle.hpp">
       <Filter>Header Files\neurology</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\include\neurology\outlet.hpp">
+    <ClInclude Include="..\..\src\include\neurology\circuitry.hpp">
       <Filter>Header Files\neurology</Filter>
     </ClInclude>
   </ItemGroup>
@@ -122,7 +122,7 @@
     <ClCompile Include="..\..\src\lib\handle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\lib\outlet.cpp">
+    <ClCompile Include="..\..\src\lib\circuitry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
