after disappearing into the depths of Bjarne's Dungeon of Doom, I have come out triumphantly after managing to defeat a const_cast<LPVOID>(Grue). I return with its carcass, its role as "reference" being imperialized and repurposed for my more human gains.

--- a/msvc/neurology/neurology.vcxproj
+++ b/msvc/neurology/neurology.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="..\..\src\include\neurology\pe\optional.hpp" />
     <ClInclude Include="..\..\src\include\neurology\pe\section.hpp" />
     <ClInclude Include="..\..\src\include\neurology\process.hpp" />
+    <ClInclude Include="..\..\src\include\neurology\reference.hpp" />
     <ClInclude Include="..\..\src\include\neurology\security.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -176,6 +177,7 @@
     <ClCompile Include="..\..\src\lib\pe\optional.cpp" />
     <ClCompile Include="..\..\src\lib\pe\section.cpp" />
     <ClCompile Include="..\..\src\lib\process.cpp" />
+    <ClCompile Include="..\..\src\lib\reference.cpp" />
     <ClCompile Include="..\..\src\lib\security.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
