--- a/msvc/neurology/neurology.vcxproj.filters
+++ b/msvc/neurology/neurology.vcxproj.filters
@@ -75,12 +75,6 @@
     <ClInclude Include="..\..\src\include\neurology\configuration.hpp">
       <Filter>Header Files\neurology</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\include\neurology\heap.hpp">
-      <Filter>Header Files\neurology\allocators</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\include\neurology\memory.hpp">
-      <Filter>Header Files\neurology</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\include\neurology\allocators\allocator.hpp">
       <Filter>Header Files\neurology\allocators</Filter>
     </ClInclude>
@@ -99,12 +93,15 @@
     <ClInclude Include="..\..\src\include\neurology\win32.hpp">
       <Filter>Header Files\neurology</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\include\neurology\object.hpp">
+      <Filter>Header Files\neurology</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\include\neurology\allocators\heap.hpp">
+      <Filter>Header Files\neurology\allocators</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\lib\exception.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\lib\memory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\lib\pe\dos.cpp">
@@ -126,9 +123,6 @@
       <Filter>Source Files\pe</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\lib\configuration.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\lib\reference.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\lib\allocators\allocator.cpp">
